<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:paddingTop="50dp"
        android:paddingBottom="30dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:paddingStart="3.2dp"
            android:paddingLeft="3.2dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp"
            android:textSize="18sp"
            android:textColor="@color/colorMilky">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username_hint"
            android:hint="@string/username_hint"
            android:textColorHint="@color/colorMilky"
            android:inputType="text"
            android:theme="@style/LightEditText">
        </EditText>
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:paddingStart="3.2dp"
            android:paddingLeft="3.2dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp"
            android:textSize="18sp"
            android:textColor="@color/colorMilky">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username_hint"
            android:hint="@string/username_hint"
            android:textColorHint="@color/colorMilky"
            android:inputType="text"
            android:theme="@style/LightEditText">
        </EditText>
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:paddingStart="3.2dp"
            android:paddingLeft="3.2dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp"
            android:textSize="18sp"
            android:textColor="@color/colorMilky">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password_hint"
            android:hint="@string/password_hint"
            android:textColorHint="@color/colorMilky"
            android:inputType="text"
            android:theme="@style/LightEditText">
        </EditText>
        <View
            android:layout_width="match_parent"
            android:layout_height="40dp">
        </View>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login"
            android:backgroundTint="@color/colorAccent">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>